Fix scrolling on iphone

--- a/mentor/styles/mentor.scss
+++ b/mentor/styles/mentor.scss
@@ -48,7 +48,7 @@ template {
   opacity: 1;
   max-height: 6000px;
   overflow: visible;
-  margin-bottom: 400px;
+  padding-bottom: 200px;
 }
 
 .lpa-subpage h1 {
